# agent-supervisor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  scorers.py
.bt/: config.json
.github/workflows/: ci.yml  flywheel.yml  run_on_schedule.yml
docs/: flywheel-demo-runbook.md
evals/: eval_gateway_model_matrix.py  eval_math_agent.py  eval_research_agent.py  eval_supervisor.py  parameters.py
scripts/: run_queries.py
src/: config.py  eval_server.py  local_runner.py
